add inicio page y limpiando codigo

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ body{
   font-family: 'Raleway', sans-serif;
 }
 
+img{
+  width: 100%;
+  height: auto;
+}
+
 .button-fila{
   width: 2rem;
   height: 2rem;
